# cairn

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.mcp  LICENSE  Procfile  README.md  main.py  pyproject.toml  railway.toml
agent/: __init__.py  act.py  audio_digest.py  classifier.py  classify.py  compile_digest.py  daemon.py  digest.py  evaluation.py  graph.py  model_router.py  nodes.py  notifications.py  plan.py  reflect.py  state.py  utils.py
agent/tools/: __init__.py  arxiv_search.py  code_executor.py  file_reader.py  file_writer.py  github_search.py  metatool.py  note_taker.py  project_tools.py  scms_tools.py  url_reader.py  web_search.py
config/: digest_sources.yaml  model_routing.yaml  sandbox_policy.yaml  settings.py
mcp_server/: config.py  server.py
notebooks/: sprint9_eval_baseline.ipynb
sandbox/: Dockerfile  __init__.py  manager.py
scms/: __init__.py  client.py  embeddings.py
scms/migrations/: 001_initial.sql  002_sandbox_metatool.sql  003_task_queue.sql  004a_embedding_pre_migrate.sql  004b_embedding_post_migrate.sql  005_add_archived_status.sql
scripts/: migrate_embeddings.py
tests/: test_audio_digest.py  test_classifier.py  test_compile_digest.py  test_digest_dedup.py  test_digest_fewshot.py  test_digest_prefilter.py  test_evaluation.py  test_graph_integration.py  test_mcp_server.py  test_metatool_loading.py  test_model_router.py  test_plan_parser.py  test_project_crud.py  test_rerank.py
